@@ -39,7 +39,7 @@
 # All values set to string variables or environment variables are checked
 # for  ${envvar}  and replacement is done at the time of the setting.
 # You can also specify a default value for the case that envvar is not set:
-#  ${envvar:default}  or  ${envvar:-default}  .
+#   ${envvar:default}  (the format  ${envvar:-default}  is supported, too).
 
 # Any environment variable may be set with the directive  setenv  .
 # Example:  setenv COB_LIBARAY_PATH ${LD_LIBRARY_PATH}
@@ -48,17 +48,17 @@
 # (one var per line).
 # Example:  unsetenv COB_LIBRARY_PATH
 
-# Runtime configuration files can include other files with the directive
-# include.
+# Runtime configuration files can include other files with the
+# directive  include  .
 # Example:  include my-runtime-configuration-file
 
-# To include another configuration file only if it is present use the directive
-# includeif.
+# To include another configuration file only if it is present use the
+# directive  includeif  .
 # You can also use  ${envvar}  inside this.
 # Example:  includeif ${HOME}/mygc.cfg
 
-# If you want to reset a parameter to its default value use:
-#    reset parametername
+# If you want to reset a parameter to its default value use
+#   reset parametername  .
 
 # Most runtime variables have boolean values, some are switches, some have
 # string values, integer values and some are size values.
@@ -75,8 +75,11 @@
 
 # For a complete list of the settings in use see  cobcrun --runtime-config  .
 
-# Note: If you want to *slightly* speed up a program's startup time, remove all
-#       of the comments from the actual real configuration file that is processed
+# Note:
+# If you want to *slightly* speed up a program's startup time, remove all
+# of the comments from the actual real configuration file that is processed.
+
+##
 
 #
 ## General environment
