@@ -1,4 +1,8 @@
 
+2019-04-28  Simon Sobisch <simonsobisch@gnu.org>
+
+	* cobcinfo.sh: improved output for runtime configuration
+
 2019-02-18  Simon Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: cleanup distribution rules
